--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -45,12 +45,12 @@
         android:layout_gravity="center_horizontal"
         android:id="@+id/sendForm"
         />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registration"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/registr"
-        />
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Registration"-->
+<!--        android:layout_gravity="center_horizontal"-->
+<!--        android:id="@+id/registr"-->
+<!--        />-->
 
 </LinearLayout>
